--- a/app/src/main/res/layout/activity_update_add_worker_one.xml
+++ b/app/src/main/res/layout/activity_update_add_worker_one.xml
@@ -125,29 +125,29 @@
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_mon_to_fri"
-                        android:layout_width="44dp"
-                        android:layout_height="31dp"
+                        android:layout_width="53dp"
+                        android:layout_height="41dp"
                         android:layout_marginTop="14dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
                         android:lineSpacingExtra="0sp"
-                        android:paddingVertical="8dp"
+                        android:paddingVertical="12dp"
                         android:text="평일"
-                        android:textColor="#6f6f6f"
+                        android:textColor="@color/selector_tv_btn"
                         android:textSize="14sp" />
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_sat_to_sun"
-                        android:layout_width="44dp"
-                        android:layout_height="31dp"
+                        android:layout_width="53dp"
+                        android:layout_height="41dp"
                         android:layout_marginTop="14dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
                         android:lineSpacingExtra="0sp"
-                        android:paddingVertical="8dp"
+                        android:paddingVertical="12dp"
                         android:text="주말"
-                        android:layout_marginStart="4dp"
-                        android:textColor="#6f6f6f"
+                        android:layout_marginStart="8dp"
+                        android:textColor="@color/selector_tv_btn"
                         android:textSize="14sp" />
                 </LinearLayout>
 
@@ -163,40 +163,40 @@
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_open"
-                        android:layout_width="44dp"
-                        android:layout_height="31dp"
+                        android:layout_width="53dp"
+                        android:layout_height="41dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
                         android:lineSpacingExtra="0sp"
-                        android:paddingVertical="8dp"
+                        android:paddingVertical="12dp"
                         android:text="오픈"
-                        android:textColor="#6f6f6f"
+                        android:textColor="@color/selector_tv_btn"
                         android:textSize="14sp" />
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_middle"
-                        android:layout_width="44dp"
-                        android:layout_height="31dp"
+                        android:layout_width="53dp"
+                        android:layout_height="41dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
                         android:lineSpacingExtra="0sp"
-                        android:paddingVertical="8dp"
+                        android:paddingVertical="12dp"
                         android:text="미들"
-                        android:layout_marginStart="4dp"
-                        android:textColor="#6f6f6f"
+                        android:layout_marginStart="8dp"
+                        android:textColor="@color/selector_tv_btn"
                         android:textSize="14sp" />
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_close"
-                        android:layout_width="44dp"
-                        android:layout_height="31dp"
+                        android:layout_width="53dp"
+                        android:layout_height="41dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
                         android:lineSpacingExtra="0sp"
-                        android:paddingVertical="8dp"
+                        android:paddingVertical="12dp"
                         android:text="마감"
-                        android:layout_marginStart="4dp"
-                        android:textColor="#6f6f6f"
+                        android:layout_marginStart="8dp"
+                        android:textColor="@color/selector_tv_btn"
                         android:textSize="14sp" />
                 </LinearLayout>
 
@@ -296,57 +296,57 @@
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_no_rest"
-                        android:layout_width="44dp"
-                        android:layout_height="31dp"
+                        android:layout_width="53dp"
+                        android:layout_height="41dp"
                         android:layout_marginTop="14dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
                         android:lineSpacingExtra="0sp"
-                        android:paddingVertical="8dp"
+                        android:paddingVertical="12dp"
                         android:text="없음"
-                        android:textColor="#6f6f6f"
+                        android:textColor="@color/selector_tv_btn"
                         android:textSize="12sp" />
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_30_min"
-                        android:layout_width="48dp"
-                        android:layout_height="31dp"
-                        android:layout_marginStart="4dp"
+                        android:layout_width="53dp"
+                        android:layout_height="41dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="14dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
                         android:lineSpacingExtra="0sp"
-                        android:paddingVertical="8dp"
+                        android:paddingVertical="12dp"
                         android:text="30분"
-                        android:textColor="#6f6f6f"
+                        android:textColor="@color/selector_tv_btn"
                         android:textSize="12sp" />
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_60_min"
-                        android:layout_width="48dp"
-                        android:layout_height="31dp"
-                        android:layout_marginStart="4dp"
+                        android:layout_width="53dp"
+                        android:layout_height="41dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="14dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
                         android:lineSpacingExtra="0sp"
-                        android:paddingVertical="8dp"
+                        android:paddingVertical="12dp"
                         android:text="60분"
-                        android:textColor="#6f6f6f"
+                        android:textColor="@color/selector_tv_btn"
                         android:textSize="12sp" />
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_90_min"
-                        android:layout_width="48dp"
-                        android:layout_height="31dp"
-                        android:layout_marginStart="4dp"
+                        android:layout_width="53dp"
+                        android:layout_height="41dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="14dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
                         android:lineSpacingExtra="0sp"
-                        android:paddingVertical="8dp"
+                        android:paddingVertical="12dp"
                         android:text="90분"
-                        android:textColor="#6f6f6f"
+                        android:textColor="@color/selector_tv_btn"
                         android:textSize="12sp" />
 
                 </LinearLayout>
