--- a/app/src/main/res/layout/activity_update_add_worker_one.xml
+++ b/app/src/main/res/layout/activity_update_add_worker_one.xml
@@ -106,10 +106,10 @@
                     android:id="@+id/tv_select_position_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
                     android:text="포지션이 여러개라면, 메인 포지션을 선택해 주세요."
                     android:textColor="@color/text2_a3a3a3"
                     android:textSize="14sp"
-                    android:layout_marginTop="6dp"
                     app:layout_constraintStart_toStartOf="@id/tv_select_position"
                     app:layout_constraintTop_toBottomOf="@id/tv_select_position" />
 
@@ -117,11 +117,11 @@
                     android:id="@+id/ll_select_position_top"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     android:layout_marginTop="24dp"
-                    app:layout_constraintTop_toBottomOf="@id/tv_select_position"
+                    android:orientation="horizontal"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent">
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_select_position">
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_mon_to_fri"
@@ -140,13 +140,13 @@
                         android:id="@+id/btn_sat_to_sun"
                         android:layout_width="53dp"
                         android:layout_height="41dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="14dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
                         android:lineSpacingExtra="0sp"
                         android:paddingVertical="12dp"
                         android:text="주말"
-                        android:layout_marginStart="8dp"
                         android:textColor="@color/selector_tv_btn"
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -155,11 +155,11 @@
                     android:id="@+id/ll_select_position_bottom"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@id/ll_select_position_top"
+                    android:orientation="horizontal"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent">
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/ll_select_position_top">
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_open"
@@ -177,12 +177,12 @@
                         android:id="@+id/btn_middle"
                         android:layout_width="53dp"
                         android:layout_height="41dp"
+                        android:layout_marginStart="8dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
                         android:lineSpacingExtra="0sp"
                         android:paddingVertical="12dp"
                         android:text="미들"
-                        android:layout_marginStart="8dp"
                         android:textColor="@color/selector_tv_btn"
                         android:textSize="14sp" />
 
@@ -190,12 +190,12 @@
                         android:id="@+id/btn_close"
                         android:layout_width="53dp"
                         android:layout_height="41dp"
+                        android:layout_marginStart="8dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
                         android:lineSpacingExtra="0sp"
                         android:paddingVertical="12dp"
                         android:text="마감"
-                        android:layout_marginStart="8dp"
                         android:textColor="@color/selector_tv_btn"
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -231,10 +231,39 @@
                     android:letterSpacing="-0.03"
                     android:text="근무일"
                     android:textColor="@color/text3_6f6f6f"
-                    android:textSize="14sp"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="@id/tv_input_scheudle"
                     app:layout_constraintTop_toBottomOf="@id/tv_input_scheudle" />
+
+                <LinearLayout
+                    android:id="@+id/ll_working_done"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="13dp"
+                    android:orientation="horizontal"
+                    android:visibility="gone"
+                    app:layout_constraintStart_toEndOf="@id/tv_working_day"
+                    app:layout_constraintTop_toBottomOf="@id/tv_input_scheudle">
+
+                    <TextView
+                        android:id="@+id/tv_working_done"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="설정완료"
+                        android:layout_gravity="center"
+                        android:textColor="@color/alert2_1dbe4e"
+                        android:textSize="14sp" />
+
+                    <ImageView
+                        android:id="@+id/iv_working_done"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_place_more_check_active" />
+
+                </LinearLayout>
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btn_select_work_day"
@@ -281,7 +310,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="3dp"
-                        android:src="@drawable/ic_rest_time_question_info"/>
+                        android:src="@drawable/ic_rest_time_question_info" />
                 </LinearLayout>
 
                 <LinearLayout
