[FIX] 근무자 추가: 버튼 Flag 받기

--- a/app/src/main/res/layout/activity_update_add_worker_one.xml
+++ b/app/src/main/res/layout/activity_update_add_worker_one.xml
@@ -52,7 +52,7 @@
                 android:enabled="false"
                 android:letterSpacing="-0.03"
                 android:text="다음"
-                android:textColor="#adadad"
+                android:textColor="@color/selector_tv_done"
                 android:textSize="16sp"
                 android:textStyle="normal" />
 
