--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,9 @@
         android:id="@+id/iv_logo_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="156dp"
-        android:src="@drawable/logo_image"
+        android:layout_marginTop="180dp"
         android:foregroundGravity="center"
+        android:src="@drawable/logo_image"
         app:layout_constraintBottom_toTopOf="@id/iv_logo_txt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,9 +24,9 @@
         android:id="@+id/iv_logo_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/logo_text"
         android:layout_marginTop="15dp"
         android:foregroundGravity="center"
+        android:src="@drawable/logo_text"
         app:layout_constraintBottom_toTopOf="@id/tv_main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,77 +39,73 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
         android:fontFamily="@font/roboto_medium_otf"
+        android:letterSpacing="-0.03"
         android:lineHeight="33sp"
+        android:lineSpacingExtra="17sp"
         android:text="알바집으로 알바관리 A-Z까지"
+        android:textAlignment="center"
         android:textColor="@color/customBlack"
         android:textSize="16sp"
-        android:letterSpacing="-0.03"
-        android:lineSpacingExtra="17sp"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@id/btn_register"
+        app:layout_constraintBottom_toTopOf="@id/btn_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_logo_txt" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_register"
+        android:id="@+id/btn_login"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="146dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/btn_main_yellow_fill_rounded"
         android:fontFamily="@font/roboto_bold_otf"
         android:letterSpacing="-0.03"
         android:lineSpacingExtra="4sp"
-        android:text="회원가입"
-        android:textColor="@color/customBlack"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:stateListAnimator="@null"
-        app:layout_constraintBottom_toTopOf="@id/btn_login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_main"
-        app:layout_constraintVertical_chainStyle="packed" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_login"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/rectangle_fill_light_gray_rounded_15"
-        android:fontFamily="@font/roboto_bold_otf"
-        android:letterSpacing="-0.03"
-        android:lineSpacingExtra="4sp"
+        android:paddingVertical="16dp"
         android:text="로그인"
         android:textColor="@color/customBlack"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:stateListAnimator="@null"
-        app:layout_constraintBottom_toTopOf="@id/tv_pw_set"
-        app:layout_constraintEnd_toEndOf="@+id/btn_register"
-        app:layout_constraintStart_toStartOf="@id/btn_register"
-        app:layout_constraintTop_toBottomOf="@id/btn_register"
-        app:layout_constraintVertical_chainStyle="packed" />
-
-    <TextView
-        android:id="@+id/tv_pw_set"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="127dp"
-        android:fontFamily="@font/roboto_bold_otf"
-        android:letterSpacing="-0.03"
-        android:lineSpacingExtra="19sp"
-        android:text="비밀번호 재설정"
-        android:textColor="#cecece"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/tv_main_info"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_login" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_main" />
+
+    <TextView
+        android:id="@+id/tv_main_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="127dp"
+        android:fontFamily="@font/roboto_medium_otf"
+        android:letterSpacing="-0.03"
+        android:lineSpacingExtra="19sp"
+        android:text="알바집이 처음이신가요?"
+        android:textColor="#a3a3a3"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toStartOf="@id/tv_register"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="@+id/btn_login"
+        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+
+    <TextView
+        android:id="@+id/tv_register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:letterSpacing="-0.03"
+        android:lineSpacingExtra="4sp"
+        android:text="회원가입하기"
+        android:textColor="#343434"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@id/tv_main_info"
+        app:layout_constraintEnd_toEndOf="@+id/btn_login"
+        app:layout_constraintStart_toEndOf="@id/tv_main_info"
+        app:layout_constraintTop_toTopOf="@id/tv_main_info" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
