--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -121,47 +121,46 @@
                     app:progressMode="false"/>
             </LinearLayout>
 
-            <FrameLayout
-                android:id="@+id/float_add_work_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingVertical="14dp"
-                android:background="@drawable/rectangle_fill_custom_black_radius_40"
-                android:layout_gravity="center"
-                android:layout_marginTop="24dp"
-                android:layout_marginBottom="20dp">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_home_add"
-                        android:layout_marginStart="18dp"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="sans-serif-medium"
-                        android:layout_marginStart="6dp"
-                        android:layout_marginEnd="20dp"
-                        android:textStyle="normal"
-                        android:textSize="14sp"
-                        android:textColor="#ffffff"
-                        android:letterSpacing="-0.01"
-                        android:lineSpacingExtra="10sp"
-                        android:gravity="center_horizontal"
-                        android:text="할 일 추가"/>
-                </LinearLayout>
-            </FrameLayout>
-
-
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
+
+    <FrameLayout
+        android:id="@+id/float_add_work_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingVertical="14dp"
+        android:background="@drawable/rectangle_fill_custom_black_radius_40"
+        android:layout_gravity="center|bottom"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="20dp">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_home_add"
+                android:layout_marginStart="18dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:layout_marginStart="6dp"
+                android:layout_marginEnd="20dp"
+                android:textStyle="normal"
+                android:textSize="14sp"
+                android:textColor="#ffffff"
+                android:letterSpacing="-0.01"
+                android:lineSpacingExtra="10sp"
+                android:gravity="center_horizontal"
+                android:text="할 일 추가"/>
+        </LinearLayout>
+    </FrameLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
