--- a/app/src/main/res/layout/activity_add_worker_two.xml
+++ b/app/src/main/res/layout/activity_add_worker_two.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
 
     <androidx.appcompat.widget.Toolbar
@@ -88,13 +88,14 @@
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginTop="24dp"
                 android:background="@drawable/fill_light_gray_radius_20">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="7sp"
-                    android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true"
                     android:paddingHorizontal="24dp"
                     android:text="해당 업무리스트는 포지션 담당 업무로, 업무를 작성하면 근무자의 근무일에 고정되어 노출됩니다."
                     android:textColor="#a3a3a3"
@@ -102,67 +103,82 @@
                     android:textStyle="normal" />
             </RelativeLayout>
 
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
-                android:textColor="#343434"
-                android:letterSpacing="-0.02"
-                android:lineSpacingExtra="-4sp"
-                android:text="업무리스트 작성하기"/>
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:fontFamily="sans-serif"
+                    android:letterSpacing="-0.02"
+                    android:lineSpacingExtra="-4sp"
+                    android:text="업무리스트 작성하기"
+                    android:textColor="#343434"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_medium_otf"
+                    android:text="(선택)"
+                    android:gravity="center"
+                    android:layout_marginStart="4dp"
+                    android:textColor="@color/text2_a3a3a3"
+                    android:textSize="16sp" />
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_to_do_list"
-                android:visibility="gone"
-                android:layout_marginTop="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:listitem="@layout/item_rv_add_to_do"
-                android:layout_marginHorizontal="24dp"/>
+                android:layout_marginHorizontal="24dp"
+                android:layout_marginTop="16dp"
+                android:visibility="gone"
+                tools:listitem="@layout/item_rv_add_to_do" />
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_add_to_do"
                 android:layout_width="111dp"
                 android:layout_height="44dp"
+                android:layout_gravity="center"
                 android:layout_marginTop="14dp"
                 android:layout_marginBottom="14dp"
-                android:layout_gravity="center"
                 android:background="@drawable/rectangle_light_gray_rounded_26">
 
                 <ImageView
                     android:id="@+id/ic_btn_drawable"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@drawable/ic_plus_20"
-                    android:background="@null"
                     android:layout_marginStart="22dp"
+                    android:background="@null"
+                    android:src="@drawable/ic_plus_20"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/tv_btn_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textSize="12sp"
-                    android:textColor="#6f6f6f"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginEnd="26dp"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="0sp"
                     android:text="업무추가"
-                    android:layout_marginStart="2dp"
-                    android:layout_marginEnd="26dp"
-                    android:layout_gravity="center"
+                    android:textColor="#6f6f6f"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/ic_btn_drawable"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    />
+                    app:layout_constraintStart_toEndOf="@id/ic_btn_drawable"
+                    app:layout_constraintTop_toTopOf="parent" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
