--- a/app/src/main/res/layout/activity_edit_worker_two.xml
+++ b/app/src/main/res/layout/activity_edit_worker_two.xml
@@ -102,18 +102,34 @@
                     android:textStyle="normal" />
             </RelativeLayout>
 
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
-                android:textColor="#343434"
-                android:letterSpacing="-0.02"
-                android:lineSpacingExtra="-4sp"
-                android:text="업무리스트 작성하기"/>
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:fontFamily="sans-serif"
+                    android:letterSpacing="-0.02"
+                    android:lineSpacingExtra="-4sp"
+                    android:text="업무리스트 작성하기"
+                    android:textColor="#343434"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_medium_otf"
+                    android:text="(선택)"
+                    android:gravity="center"
+                    android:layout_marginStart="4dp"
+                    android:textColor="@color/text2_a3a3a3"
+                    android:textSize="16sp" />
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_to_do_list"
