--- a/app/src/main/res/layout/dialog_fragment_time.xml
+++ b/app/src/main/res/layout/dialog_fragment_time.xml
@@ -30,8 +30,7 @@
         android:lineSpacingExtra="5sp"
         android:layout_marginTop="8dp"
         android:visibility="gone"
-        android:text="마감시간은 마감 근무자의\n
-퇴근시간을 기준으로 설정해주세요."
+        android:text="마감시간은 마감 근무자의\n퇴근시간을 기준으로 설정해주세요."
         app:layout_constraintStart_toStartOf="@id/tv_dialog_title"
         app:layout_constraintTop_toBottomOf="@id/tv_dialog_title"
         app:layout_constraintBottom_toTopOf="@id/framelayout"/>
