--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -41,7 +41,7 @@
     <color name="gray8_9f9f9f">#9F9F9F</color>
 
     <color name="text1_c9c9c9">#C9C9C9</color>
-    <color name="text2_a3a3a3">#C9C9C9</color>
+    <color name="text2_a3a3a3">#A3A3A3</color>
     <color name="text3_6f6f6f">#6F6F6F</color>
     <color name="text4_343434">#343434</color>
 
