--- a/app/src/main/res/layout/activity_bnum.xml
+++ b/app/src/main/res/layout/activity_bnum.xml
@@ -65,6 +65,7 @@
             android:singleLine="true"
             android:maxLength="12"
             android:inputType="number"
+            android:imeOptions="actionDone"
             android:layout_centerVertical="true"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="56dp"
