[QA] 버튼 터치영역 ) 영업시간 일괄 설정 버튼

--- a/app/src/main/res/layout/activity_running_time.xml
+++ b/app/src/main/res/layout/activity_running_time.xml
@@ -107,7 +107,7 @@
                         android:layout_width="24dp"
                         android:layout_height="24dp">
 
-                        <ImageButton
+                        <ImageView
                             android:id="@+id/cb_running_time_checkbox"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -115,13 +115,6 @@
                             android:background="@drawable/selector_circle_yellow_checkbox"
                             android:button="@android:color/transparent"
                             android:checked="false"/>
-
-                        <View
-                            android:id="@+id/view_running_check"
-                            android:background="@android:color/transparent"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:clickable="true"/>
                     </FrameLayout>
 
                     <TextView
