--- a/app/src/main/res/layout/item_rv_running_time.xml
+++ b/app/src/main/res/layout/item_rv_running_time.xml
@@ -31,54 +31,69 @@
         app:layout_constraintStart_toStartOf="@id/tv_days"
         app:layout_constraintTop_toBottomOf="@id/tv_days">
 
-        <ImageButton
-            android:id="@+id/cb_rest_day"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:background="@drawable/selector_circle_yellow_checkbox"
-            android:button="@android:color/transparent" />
-
-        <TextView
-            android:id="@+id/tv_rest_day"
+        <LinearLayout
+            android:id="@+id/ll_rest_day"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginStart="4dp"
-            android:fontFamily="@font/roboto_regular_otf"
-            android:gravity="center"
-            android:letterSpacing="-0.03"
-            android:lineSpacingExtra="7sp"
-            android:text="@string/common_rest_day"
-            android:textColor="@color/text4_343434"
-            android:textSize="16sp" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/cb_24_hour"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            <ImageView
+                android:id="@+id/cb_rest_day"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:background="@drawable/selector_circle_yellow_checkbox"
+                android:button="@android:color/transparent" />
+
+            <TextView
+                android:id="@+id/tv_rest_day"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="4dp"
+                android:fontFamily="@font/roboto_regular_otf"
+                android:gravity="center"
+                android:letterSpacing="-0.03"
+                android:lineSpacingExtra="7sp"
+                android:text="@string/common_rest_day"
+                android:textColor="@color/text4_343434"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_24_hour"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
-            android:background="@drawable/selector_circle_yellow_checkbox"
-            android:button="@android:color/transparent" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_24_hour"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginStart="4dp"
-            android:fontFamily="@font/roboto_regular_otf"
-            android:gravity="center"
-            android:letterSpacing="-0.03"
-            android:lineSpacingExtra="7sp"
-            android:text="@string/common_24_hour"
-            android:textColor="@color/text4_343434"
-            android:textSize="16sp" />
+            <ImageView
+                android:id="@+id/cb_24_hour"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:background="@drawable/selector_circle_yellow_checkbox"
+                android:button="@android:color/transparent" />
+
+            <TextView
+                android:id="@+id/tv_24_hour"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="4dp"
+                android:fontFamily="@font/roboto_regular_otf"
+                android:gravity="center"
+                android:letterSpacing="-0.03"
+                android:lineSpacingExtra="7sp"
+                android:text="@string/common_24_hour"
+                android:textColor="@color/text4_343434"
+                android:textSize="16sp" />
+        </LinearLayout>
     </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/ll_running_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="14dp"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="@id/ll_check"
         app:layout_constraintStart_toStartOf="@id/ll_check"
         app:layout_constraintTop_toBottomOf="@id/ll_check">
@@ -89,8 +104,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="134"
-            android:clickable="true"
             android:background="@drawable/selector_run_time"
+            android:clickable="true"
             android:paddingHorizontal="17dp"
             android:paddingVertical="14dp">
 
@@ -110,8 +125,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
-                android:text="00:00"
                 android:enabled="false"
+                android:text="00:00"
                 android:textColor="@color/selector_tv_runtime"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -124,15 +139,15 @@
             android:layout_height="match_parent"
             android:layout_weight="44"
             android:paddingHorizontal="11dp"
-            android:src="@drawable/ic_running_time_wave"/>
+            android:src="@drawable/ic_running_time_wave" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_close"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="134"
-            android:clickable="true"
             android:background="@drawable/selector_run_time"
+            android:clickable="true"
             android:paddingHorizontal="17dp"
             android:paddingVertical="14dp">
 
@@ -152,8 +167,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
-                android:text="00:00"
                 android:enabled="false"
+                android:text="00:00"
                 android:textColor="@color/selector_tv_runtime"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -166,24 +181,24 @@
         android:id="@+id/tv_total_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="8시간"
-        android:fontFamily="@font/roboto_medium_otf"
-        android:textSize="12sp"
-        android:textColor="@color/text2_a3a3a3"
-        android:letterSpacing="-0.03"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="17dp"
+        android:fontFamily="@font/roboto_medium_otf"
         android:gravity="end"
+        android:letterSpacing="-0.03"
+        android:text="8시간"
+        android:textColor="@color/text2_a3a3a3"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ll_running_time"
         app:layout_constraintEnd_toEndOf="@id/ll_running_time"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintTop_toBottomOf="@id/ll_running_time" />
 
     <View
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:background="@color/gray4_ededed"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
