[qc] 사장님/알바생 워딩수정

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -64,7 +64,7 @@
             android:gravity="center_horizontal"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="1sp"
-            android:text="관리자"
+            android:text="사장님"
             android:textColor="#343434"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -121,7 +121,7 @@
             android:gravity="center_horizontal"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="1sp"
-            android:text="근무자"
+            android:text="알바생"
             android:textColor="#343434"
             android:textSize="18sp"
             android:textStyle="bold"
