--- a/app/src/main/res/layout/child_fragment_no_worker_list.xml
+++ b/app/src/main/res/layout/child_fragment_no_worker_list.xml
@@ -37,7 +37,7 @@
                 android:id="@+id/tv_info_one"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="등록된 근무자가 없어요!"
+                android:text="등록된 알바생이 없어요!"
                 android:textStyle="bold"
                 android:textSize="22sp"
                 android:textColor="#343434"
@@ -57,7 +57,7 @@
                 android:layout_marginTop="14dp"
                 android:letterSpacing="-0.03"
                 android:lineSpacingExtra="6sp"
-                android:text="포지션을 추가하고, 근무자를 초대하면\n 근무자에 정보가 업데이트 돼요."
+                android:text="역할을 추가하고, 알바생을 초대하면\n 알바생에 대한 정보가 업데이트 돼요."
                 android:textColor="#a3a3a3"
                 android:textSize="13sp"
                 android:textStyle="normal"
@@ -67,10 +67,13 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_add_worker"
-                android:layout_width="96dp"
-                android:layout_height="36dp"
-                android:text="추가하기"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:minHeight="10dp"
+                android:paddingHorizontal="24dp"
+                android:paddingVertical="10dp"
+                android:text="알바생 추가하기"
                 android:textColor="@color/customBlack"
                 android:background="@drawable/rectangle_fill_yellow_radius_15"
                 app:layout_constraintStart_toStartOf="@id/tv_info_two"
