--- a/app/src/main/res/layout/item_rv_add_to_do.xml
+++ b/app/src/main/res/layout/item_rv_add_to_do.xml
@@ -17,7 +17,7 @@
             android:id="@+id/et_to_do_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="업무명"
+            android:hint="(업무명) 알바생이 뭘 해야 하나요?"
             android:paddingVertical="16dp"
             android:layout_marginStart="24dp"
             android:background="@null"
@@ -64,7 +64,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@null"
-            android:hint="업무 설명을 적어주세요."
+            android:hint="자세하게 설명해 주세요."
             android:letterSpacing="-0.02"
             android:lineSpacingExtra="7sp"
             android:paddingVertical="16dp"
