--- a/app/src/main/res/layout/activity_add_worker_two.xml
+++ b/app/src/main/res/layout/activity_add_worker_two.xml
@@ -39,7 +39,7 @@
                 android:layout_centerVertical="true"
                 android:gravity="center_horizontal"
                 android:letterSpacing="-0.03"
-                android:text="근무자 추가"
+                android:text="알바생 추가"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -82,9 +82,12 @@
             android:animateLayoutChanges="true"
             android:orientation="vertical">
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="66dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="16dp"
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginTop="24dp"
                 android:background="@drawable/fill_light_gray_radius_20">
@@ -92,16 +95,25 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="7sp"
-                    android:paddingHorizontal="24dp"
-                    android:text="해당 업무리스트는 포지션 담당 업무로, 업무를 작성하면 근무자의 근무일에 고정되어 노출됩니다."
+                    android:text="해당 업무리스트는 포지션 담당 업무로, 업무를 작성하면 알바생의 근무일에 고정되어 노출됩니다."
                     android:textColor="#a3a3a3"
                     android:textSize="12sp"
                     android:textStyle="normal" />
-            </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/tv_help_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="14dp"
+                    android:letterSpacing="-0.02"
+                    android:lineSpacingExtra="7sp"
+                    android:text="@string/how_to_write"
+                    android:textColor="#333333"
+                    android:textSize="12sp"
+                    android:textStyle="normal" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -110,13 +122,14 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_todo_position"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
                     android:fontFamily="sans-serif"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="-4sp"
-                    android:text="업무리스트 작성하기"
+                    android:text="@string/todo_position"
                     android:textColor="#343434"
                     android:textSize="16sp"
                     android:textStyle="bold" />
