--- a/app/src/main/res/layout/activity_update_add_worker_one.xml
+++ b/app/src/main/res/layout/activity_update_add_worker_one.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -37,7 +36,7 @@
                 android:layout_centerVertical="true"
                 android:gravity="center_horizontal"
                 android:letterSpacing="-0.03"
-                android:text="근무자 추가"
+                android:text="알바생 추가"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -95,7 +94,7 @@
                     android:layout_height="wrap_content"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="-4sp"
-                    android:text="포지션 선택하기"
+                    android:text="알바생 역할 선택하기"
                     android:textColor="@color/text4_343434"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -107,7 +106,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="6dp"
-                    android:text="포지션이 여러개라면, 메인 포지션을 선택해 주세요."
+                    android:text="역할이 여러개라면, 메인 역할을 선택해 주세요."
                     android:textColor="@color/text2_a3a3a3"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="@id/tv_select_position"
@@ -126,7 +125,8 @@
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_mon_to_fri"
                         android:layout_width="53dp"
-                        android:layout_height="41dp"
+                        android:layout_height="wrap_content"
+                        android:minHeight="0dp"
                         android:layout_marginTop="14dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
@@ -139,7 +139,8 @@
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_sat_to_sun"
                         android:layout_width="53dp"
-                        android:layout_height="41dp"
+                        android:layout_height="wrap_content"
+                        android:minHeight="0dp"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="14dp"
                         android:background="@drawable/bg_selector_rest_long"
@@ -164,7 +165,8 @@
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_open"
                         android:layout_width="53dp"
-                        android:layout_height="41dp"
+                        android:layout_height="wrap_content"
+                        android:minHeight="0dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
                         android:lineSpacingExtra="0sp"
@@ -176,7 +178,8 @@
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_middle"
                         android:layout_width="53dp"
-                        android:layout_height="41dp"
+                        android:layout_height="wrap_content"
+                        android:minHeight="0dp"
                         android:layout_marginStart="8dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
@@ -189,7 +192,8 @@
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_close"
                         android:layout_width="53dp"
-                        android:layout_height="41dp"
+                        android:layout_height="wrap_content"
+                        android:minHeight="0dp"
                         android:layout_marginStart="8dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
@@ -216,7 +220,7 @@
                     android:layout_height="wrap_content"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="-4sp"
-                    android:text="스케줄 입력하기"
+                    android:text="알바생 스케줄 등록하기"
                     android:textColor="#343434"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -272,7 +276,7 @@
                     android:background="@drawable/btn_fill_ffffff_raidus_efefef_10"
                     android:gravity="center"
                     android:paddingVertical="11dp"
-                    android:text="근무일 설정하기"
+                    android:text="설정하기"
                     android:textColor="@color/text3_6f6f6f"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -309,6 +313,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="3dp"
+                        android:layout_gravity="center"
                         android:src="@drawable/ic_rest_time_question_info" />
                 </LinearLayout>
 
@@ -324,8 +329,11 @@
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_no_rest"
-                        android:layout_width="53dp"
-                        android:layout_height="41dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:minWidth="0dp"
+                        android:minHeight="0dp"
+                        android:paddingHorizontal="14dp"
                         android:layout_marginTop="14dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
@@ -337,8 +345,11 @@
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_30_min"
-                        android:layout_width="53dp"
-                        android:layout_height="41dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:minWidth="0dp"
+                        android:minHeight="0dp"
+                        android:paddingHorizontal="14dp"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="14dp"
                         android:background="@drawable/bg_selector_rest_long"
@@ -351,8 +362,11 @@
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_60_min"
-                        android:layout_width="53dp"
-                        android:layout_height="41dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:minWidth="0dp"
+                        android:minHeight="0dp"
+                        android:paddingHorizontal="14dp"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="14dp"
                         android:background="@drawable/bg_selector_rest_long"
@@ -365,8 +379,11 @@
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_90_min"
-                        android:layout_width="53dp"
-                        android:layout_height="41dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:minWidth="0dp"
+                        android:minHeight="0dp"
+                        android:paddingHorizontal="14dp"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="14dp"
                         android:background="@drawable/bg_selector_rest_long"
