feat: 홈화면 툴팁 띄우기

--- a/app/src/main/res/layout/inner_tool_tips.xml
+++ b/app/src/main/res/layout/inner_tool_tips.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@android:color/transparent">
+    android:padding="4dp"
+    android:background="@drawable/home_tooltip">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_tip_top"
-        android:background="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,14 +20,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto_m"
-            android:paddingVertical="16dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="20dp"
             android:paddingStart="16dp"
+            android:layout_marginBottom="10dp"
             android:paddingEnd="12dp"
             android:textColor="@color/black"
             android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="김사장님, 여기서\n알바생을 등록할 수 있어요." />
+            android:text="사장님, 여기서\n알바생을 등록할 수 있어요." />
 
         <ImageView
             android:id="@+id/iv_delete"
@@ -35,20 +38,10 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:src="@drawable/ic_delete_20px"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_alert"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv_alert"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/tv_alert" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <ImageView
-        android:id="@+id/iv_tip_bottom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="26dp"
-        android:layout_marginBottom="-2dp"
-        android:src="@drawable/custom_alert_arrow"
-        app:layout_constraintEnd_toEndOf="@id/cl_tip_top"
-        app:layout_constraintTop_toBottomOf="@id/cl_tip_top" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
